<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_the_required_name"/>

    <EditText
        android:layout_marginTop="@dimen/margin_top_register"
        android:hint="@string/email"
        android:id="@+id/edt_email"
        android:layout_below="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_marginTop="@dimen/margin_top_register"
        android:hint="@string/password"
        android:id="@+id/edt_password"
        android:layout_below="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/margin_top_register"
        android:id="@+id/ll_name"
        android:orientation="horizontal"
        android:layout_below="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:hint="@string/firstname"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="0dp"
            android:hint="@string/lastname"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:layout_marginTop="@dimen/margin_top_register"
        android:id="@+id/edt_contact"
        android:layout_below="@+id/ll_name"
        android:hint="@string/contactnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_contact"
        android:text="@string/register"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        />

</RelativeLayout>
